# itmo-cpp-course-classroom-2026-lab_4-Cpp.Course.Lab4

./: CMakeLists.txt
src/resource_cli/: CMakeLists.txt
src/resource_core/: CMakeLists.txt  FileHandle.cpp  FileHandle.hpp  ResourceManager.cpp  ResourceManager.hpp  file_handle.cpp  file_handle.hpp  resource_core.cpp  resource_core.h  resource_error.cpp  resource_error.hpp  resource_manager.cpp  resource_manager.hpp
src/resource_core/include/: file_handle.hpp  resource_error.hpp  resource_manager.hpp
src/resource_core/include/lab4/: resource.hpp
src/resource_core/include/lab4/resource/: FileHandle.hpp  FileHandler.hpp  ResourceError.hpp  ResourceManager.hpp
src/resource_core/include/resource/: FileHandle.hpp  ResourceError.hpp  ResourceManager.hpp
src/resource_core/include/resource_core/: FileHandle.hpp  ResourceManager.hpp  file_handle.hpp  file_io.hpp  resource_core.hpp  resource_error.hpp  resource_manager.hpp
src/resource_core/include/src/:  file_io.cpp   resource_error.cpp  file_handle.cpp  resource_manager.cpp
src/resource_core/src/: FileHandle.cpp  FileHandler.cpp  ResourceError.cpp  ResourceManager.cpp  file_handle.cpp  resource.cpp  resource_manager.cpp
tests/: CMakeLists.txt  tests.cpp
